Deleted unused images and updated index and CSS files.

--- a/cogs3.html
+++ b/cogs3.html
@@ -87,70 +87,51 @@
 	
 	<div class="row"><br></div>
 	<div class="row">
-	
-	<div class="leftnavi span3">
 		
-	
-		<p>
-		+ <a href="index.html">h o m e</a>	
-		</p>
-			<br/>
-		<p>
-		+ <a href="portfolio.html">p o r t f o l i o</a>
-		</p>
-			<br/>
-		<p>
-		+ <a href="contact.html">c o n t a c t</a>
-		</p>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
-
-			
-		</div>
-		
-	<div class="main span12">
-		
-		<div class="span4">
-		<h1>h e l l o .</h1>
+	<div class="main span16">
+			<a href="portfolio.html">&lt;.&lt;. B a c k</a>
+			<br/><br/>
+		<div class="span15">
+		<h1><b>C O G S 3</b> --  p o r t f o l i o .</h1>
 		</div>
 		
 		<div class="row">
-		
-		<div class="span4.5">
-		<img src="images/welcome.jpg" alt="welcome!">
+		<div class="span9">
+		<br/>
+			<a class="fancybox" href="images/cogs3/home.jpg" data-fancybox-group="proj_cogs3" title="Home Page">
+				<img src="images/cogs3/hometh.jpg" alt="Home Page" /></a>
+			<a class="fancybox" href="images/cogs3/tables.jpg" data-fancybox-group="proj_cogs3" title="Tables Exercise">
+				<img src="images/cogs3/tablesth.jpg" alt="Tables Exercise" /></a>
+			<br>	
+			<a class="fancybox" href="images/cogs3/flash.jpg" data-fancybox-group="proj_cogs3" title="Flash Animation Example">
+				<img src="images/cogs3/flashth.jpg" alt="Flash Animation Example" /></a>
+			<a class="fancybox" href="images/cogs3/javascript.jpg" data-fancybox-group="proj_cogs3" title="Javascript Exmaple">
+				<img src="images/cogs3/javascriptth.jpg" alt="Javascript Example" /></a>
+
 		</div>
 		
+		<div class="span6">
+		<br/>
+		<p>This portfolio was created in May 2011 as a class assignment for COGS 3 at UCSD.
+		The goal was to create a CSS webpage showcasing our accomplishments for that class.</p>
+		<p>The portfolio itself consists of a single page linking to separate assignments. 
+		Among them include completed tables, forms, javascript, flash, and photoshop exercises.
+		The navigation bar along the top lights up as the buttons are scrolled-over.
+		There is also a functional Google-powered search bar set to search the UCSD website.</p>
+		<p>The site was built with HTML, CSS, and Javascript in Notepad++.
+		All images were taken or drawn by myself in Adobe Photoshop CS4.</p>
 		
-		<div class="span7">
-		<br/>
-		<p>My name is <b>Annie</b>, and welcome to my online portfolio.</p>
-		<br/>
-		<p>Here you'll find selected <i>artwork</i>, <i>photographs</i>, and <i>webpages</i> I've designed over the years.  You will find the navigation on the left, along with several external links near the the upper right.</p>
-		<br/>
-		<p>I'm currently undergraduate at the University of California, San Diego. I enjoy cooking, traveling, and video gaming. I absoltely love cats (and dogs)!</p>
-		<br/>
-		<p>Please take your time to browse around. Feel free to <a href="contact.html">contact me</a> if you have any questions! :)</p>
-		<br/>
 		
-		<br/><br/>
+		<br/>
+		<a href="portfolio.html">&lt;.&lt;. R e t u r n &nbsp; t o &nbsp; p o r t f o l i o</a>
 		</div>
 		
-		
 		</div>
+		</div>
+	
+		
 	</div>
 	
-	</div>
 	
 	<div class="row">
 	
