--- a/contact.html
+++ b/contact.html
@@ -115,41 +115,47 @@
 			<br/>
 		    <br/>
 			<br/>
+			<br/>
 
 			
 		</div>
 		
 	<div class="main span12">
-		
-		<div class="span4">
-		<h1>h e l l o .</h1>
+		<div class="span5">
+		<h1>c o n t a c t .</h1>
 		</div>
-		
 		<div class="row">
+		<div class="span6.5">
 		
-		<div class="span4.5">
-		<img src="images/welcome.jpg" alt="welcome!">
-		</div>
+		<form class="form-stacked" action="#">
+		<div class="clearfix">
+		<label for="Subject">s u b j e c t &nbsp;</label>
+		<input class="span6" id="Subject" name="Subject" type="text" placeholder="">
 		
+		<label for="name">n a m e &nbsp;</label>
+		<input class="span6" id="name" name="name" type="text" placeholder="">
+
+		<label for="email">e m a i l &nbsp;</label>
+		<input class="span6" id="email" name="email" type="text" placeholder="">
 		
-		<div class="span7">
-		<br/>
-		<p>My name is <b>Annie</b>, and welcome to my online portfolio.</p>
-		<br/>
-		<p>Here you'll find selected <i>artwork</i>, <i>photographs</i>, and <i>webpages</i> I've designed over the years.  You will find the navigation on the left, along with several external links near the the upper right.</p>
-		<br/>
-		<p>I'm currently undergraduate at the University of California, San Diego. I enjoy cooking, traveling, and video gaming. I absoltely love cats (and dogs)!</p>
-		<br/>
-		<p>Please take your time to browse around. Feel free to <a href="contact.html">contact me</a> if you have any questions! :)</p>
-		<br/>
+		<label for="message">m e s s a g e &nbsp;</label>
+		<textarea class="span6 message" id="message" name="message" rows="6"></textarea>
 		
 		<br/><br/>
+		
+		<button class="btn success">s u b m i t</button>
+		
+		</div>
+		</form>	
 		</div>
 		
+		<div class="span1">
+		<br/><br/>
+			<img src="images/contact.jpg" alt="contact">
+		</div>
 		
 		</div>
 	</div>
-	
 	</div>
 	
 	<div class="row">
