--- a/portfolio.html
+++ b/portfolio.html
@@ -102,55 +102,90 @@
 		<p>
 		+ <a href="contact.html">c o n t a c t</a>
 		</p>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
+		    <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+
 
 			
 		</div>
 		
 	<div class="main span12">
-		
-		<div class="span4">
-		<h1>h e l l o .</h1>
+		<div class="span6">
+		<h1>p o r t f o l i o .</h1>
 		</div>
 		
 		<div class="row">
+		<div class="span10">
+		<br/>
+			<p><b>w e b &nbsp; d e s i g n > ></b></p>
+		<br/>
 		
-		<div class="span4.5">
-		<img src="images/welcome.jpg" alt="welcome!">
+		<a href="lostmaiden.html">
+		<img src="images/portfolio.jpg" alt="portfolio">
+		</a>
+		<a href="cogs3.html">
+		<img src="images/cogs3.jpg" alt="cogs3">
+		</a>
+		<a href="quietus.html">
+		<img src="images/quietus.jpg" alt="music rotation">
+		</a>
+		
+		</div>
 		</div>
 		
 		
-		<div class="span7">
-		<br/>
-		<p>My name is <b>Annie</b>, and welcome to my online portfolio.</p>
-		<br/>
-		<p>Here you'll find selected <i>artwork</i>, <i>photographs</i>, and <i>webpages</i> I've designed over the years.  You will find the navigation on the left, along with several external links near the the upper right.</p>
-		<br/>
-		<p>I'm currently undergraduate at the University of California, San Diego. I enjoy cooking, traveling, and video gaming. I absoltely love cats (and dogs)!</p>
-		<br/>
-		<p>Please take your time to browse around. Feel free to <a href="contact.html">contact me</a> if you have any questions! :)</p>
-		<br/>
-		
+		<div class="row">
+		<div class="span10">
 		<br/><br/>
+		<p><b>a r t w o r k > ></b></p>
+			<a class="fancybox" href="images/art/ulysses.jpg" data-fancybox-group="art" title="Ulysses">
+				<img src="images/art/ulysses_th.jpg" alt="Ulysses" /></a>
+			<a class="fancybox" href="images/art/heart.jpg" data-fancybox-group="art" title="Heart">
+				<img src="images/art/heart_th.jpg" alt="Heart" /></a>
+			<a class="fancybox" href="images/art/lips.jpg" data-fancybox-group="art" title="Lips">
+				<img src="images/art/lips_th.jpg" alt="Lips" /></a>
+			<a class="fancybox" href="images/art/mio.jpg" data-fancybox-group="art" title="Moe Moe Kyun!">
+				<img src="images/art/mio_th.jpg" alt="Moe Moe Kyun!" /></a>
+		<br>
+			<a class="fancybox" href="images/art/asamack.jpg" data-fancybox-group="art" title="Asamakku">
+				<img src="images/art/asamack_th.jpg" alt="Asamakku" /></a>
+			<a class="fancybox" href="images/art/rf.jpg" data-fancybox-group="art" title="Ragna and Mist">
+				<img src="images/art/rf_th.jpg" alt="Asamack" /></a>
+			<a class="fancybox" href="images/art/jobard.jpg" data-fancybox-group="art" title="Jobard">
+				<img src="images/art/jobard_th.jpg" alt="Jobard" /></a>
+			<a class="fancybox" href="images/art/tulips.jpg" data-fancybox-group="art" title="Tulips">
+				<img src="images/art/tulips_th.jpg" alt="Tulips" /></a>
+		</div>
 		</div>
 		
+		<div class="row">
+		<div class="span10">
+		<br/><br/>
+		<p><b>p h o t o g r a p h y > ></b></p>
+			<a class="fancybox" href="images/photo/01.jpg" data-fancybox-group="photo" title="Ikura">
+				<img src="images/photo/01_th.jpg" alt="Ikura" /></a>
+			<a class="fancybox" href="images/photo/02.jpg" data-fancybox-group="photo" title="Sand Castle">
+				<img src="images/photo/02_th.jpg" alt="Sand Castle" /></a>
+			<a class="fancybox" href="images/photo/03.jpg" data-fancybox-group="photo" title="Dragon">
+				<img src="images/photo/03_th.jpg" alt="Dragon" /></a>
+			<a class="fancybox" href="images/photo/04.jpg" data-fancybox-group="photo" title="San Diego">
+				<img src="images/photo/04_th.jpg" alt="San Diego" /></a>
+		<br>
+			<a class="fancybox" href="images/photo/05.jpg" data-fancybox-group="photo" title="Rose">
+				<img src="images/photo/05_th.jpg" alt="Rose" /></a>
+			<a class="fancybox" href="images/photo/06.jpg" data-fancybox-group="photo" title="Spider">
+				<img src="images/photo/06_th.jpg" alt="Spider" /></a>
+			<a class="fancybox" href="images/photo/07.jpg" data-fancybox-group="photo" title="Iron Mountain">
+				<img src="images/photo/07_th.jpg" alt="Iron Mountain" /></a>
+			<a class="fancybox" href="images/photo/08.jpg" data-fancybox-group="photo" title="Kurohime Mountain">
+				<img src="images/photo/08_th.jpg" alt="Kurohime Mountain" /></a>
+		</div>
+		</div>
+	
 		
 		</div>
 	</div>
 	
-	</div>
 	
 	<div class="row">
 	
@@ -159,6 +194,7 @@
 	<p>___________________________________________________________________________________</p>
 	<p>Layout/content &#169; 2012 Annie Chen.
 	<br>email: <a href="mailto:%20annie@lostmaiden.net">annie@lostmaiden.net</a></p>
+	
 	
 	
 	</div>
