--- a/quietus.html
+++ b/quietus.html
@@ -87,70 +87,49 @@
 	
 	<div class="row"><br></div>
 	<div class="row">
-	
-	<div class="leftnavi span3">
 		
-	
-		<p>
-		+ <a href="index.html">h o m e</a>	
-		</p>
-			<br/>
-		<p>
-		+ <a href="portfolio.html">p o r t f o l i o</a>
-		</p>
-			<br/>
-		<p>
-		+ <a href="contact.html">c o n t a c t</a>
-		</p>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
-
-			
-		</div>
-		
-	<div class="main span12">
-		
-		<div class="span4">
-		<h1>h e l l o .</h1>
+	<div class="main span16">
+			<a href="portfolio.html">&lt;.&lt;. B a c k</a>
+			<br/><br/>
+		<div class="span15">
+		<h1><b>q u i e t us</b> --  m u s i c &nbsp; r o t a t i o n .</h1>
 		</div>
 		
 		<div class="row">
-		
-		<div class="span4.5">
-		<img src="images/welcome.jpg" alt="welcome!">
+		<div class="span9">
+		<br/>
+			<a class="fancybox" href="images/quietus/v1.jpg" data-fancybox-group="quietus" title="Version 1 Layout">
+				<img src="images/quietus/v1th.jpg" alt="Version 1" /></a>
+			<a class="fancybox" href="images/quietus/v3.jpg" data-fancybox-group="quietus" title="Version 3 Layout">
+				<img src="images/quietus/v3th.jpg" alt="Version 3" /></a>
+			<br>	
+			<a class="fancybox" href="images/quietus/v4.jpg" data-fancybox-group="quietus" title="Version 4 Layout">
+				<img src="images/quietus/v4th.jpg" alt="Version 4" /></a>
+			<a class="fancybox" href="images/quietus/v5.jpg" data-fancybox-group="quietus" title="Version 5 Layout">
+				<img src="images/quietus/v5th.jpg" alt="Version 5" /></a>
+
 		</div>
 		
-		
-		<div class="span7">
+		<div class="span6">
 		<br/>
-		<p>My name is <b>Annie</b>, and welcome to my online portfolio.</p>
+		<p>This music rotation site was created in January 2006 as a personal website to
+		reccommend songs by my favorite musicians to the rest of the world.</p>
+		<p>The site layout changed several times between 2006 and 2008.
+		Each layout features the images of a musician. 
+		Navigation for all layouts existed as an image-map in the main banner.</p>
+		<p>The site also utilizes a comment box which also serves as a guestbox for each rotation.</p>
+		<p>The site was built with HTML and CSS in Notepad. 
+		Images for the layout and site were created in Adobe Photoshop 7.0.</p>
 		<br/>
-		<p>Here you'll find selected <i>artwork</i>, <i>photographs</i>, and <i>webpages</i> I've designed over the years.  You will find the navigation on the left, along with several external links near the the upper right.</p>
-		<br/>
-		<p>I'm currently undergraduate at the University of California, San Diego. I enjoy cooking, traveling, and video gaming. I absoltely love cats (and dogs)!</p>
-		<br/>
-		<p>Please take your time to browse around. Feel free to <a href="contact.html">contact me</a> if you have any questions! :)</p>
-		<br/>
-		
-		<br/><br/>
+		<a href="portfolio.html">&lt;.&lt;. R e t u r n &nbsp; t o &nbsp; p o r t f o l i o</a>
 		</div>
 		
-		
 		</div>
+		</div>
+	
+		
 	</div>
 	
-	</div>
 	
 	<div class="row">
 	
