--- a/lostmaiden.html
+++ b/lostmaiden.html
@@ -87,70 +87,48 @@
 	
 	<div class="row"><br></div>
 	<div class="row">
-	
-	<div class="leftnavi span3">
 		
-	
-		<p>
-		+ <a href="index.html">h o m e</a>	
-		</p>
-			<br/>
-		<p>
-		+ <a href="portfolio.html">p o r t f o l i o</a>
-		</p>
-			<br/>
-		<p>
-		+ <a href="contact.html">c o n t a c t</a>
-		</p>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>
-		    <br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
-			<br/>			
-			<br/>
-		    <br/>
-			<br/>
-
-			
-		</div>
-		
-	<div class="main span12">
-		
-		<div class="span4">
-		<h1>h e l l o .</h1>
+	<div class="main span16">
+			<a href="portfolio.html">&lt;.&lt;. B a c k</a>
+			<br/><br/>
+		<div class="span15">
+		<h1><b>l o s t m a i d e n</b> --  p o r t f o l i o .</h1>
 		</div>
 		
 		<div class="row">
-		
-		<div class="span4.5">
-		<img src="images/welcome.jpg" alt="welcome!">
+		<div class="span9">
+		<br/>
+			<a class="fancybox" href="images/lostmaiden/home.jpg" data-fancybox-group="proj_portfolio" title="Home Page">
+				<img src="images/lostmaiden/hometh.jpg" alt="home page" /></a>
+			<a class="fancybox" href="images/lostmaiden/external.jpg" data-fancybox-group="proj_portfolio" title="Animated Links">
+				<img src="images/lostmaiden/externalth.jpg" alt="Animated Links" /></a>
+			<br>	
+			<a class="fancybox" href="images/lostmaiden/art.jpg" data-fancybox-group="proj_portfolio" title="Lightboxes for enlarged images">
+				<img src="images/lostmaiden/artth.jpg" alt="Lightboxes for enlarged images" /></a>
+			<a class="fancybox" href="images/lostmaiden/contact.jpg" data-fancybox-group="proj_portfolio" title="Contact Page">
+				<img src="images/lostmaiden/contactth.jpg" alt="Contact Page" /></a>
+
 		</div>
 		
-		
-		<div class="span7">
+		<div class="span6">
 		<br/>
-		<p>My name is <b>Annie</b>, and welcome to my online portfolio.</p>
+		<p>This online portfolio was in January 2012 created as a class assignment for COGS 187A at UCSD.
+		The goal was to create a functional, self-expressive portfolio to show our work.</p>
+		<p>The site contains a home page, portfolio pages, and a contact page.
+		Enlarged images pop-up in a lightbox (art, photos, and screenshots).
+		Buttons for external sites on the upper-right animate when scrolled-over.</p>
+		<p>The site was built with HTML, CSS, and Javascript -- with help from Bootstrap and Fancybox.
+		All images on the site were draw or taken by myself. Programs used in the creation of the site include Google Chrome, Notepad++, Adobe Photoshop CS5 and Lightroom 3.</p>
 		<br/>
-		<p>Here you'll find selected <i>artwork</i>, <i>photographs</i>, and <i>webpages</i> I've designed over the years.  You will find the navigation on the left, along with several external links near the the upper right.</p>
-		<br/>
-		<p>I'm currently undergraduate at the University of California, San Diego. I enjoy cooking, traveling, and video gaming. I absoltely love cats (and dogs)!</p>
-		<br/>
-		<p>Please take your time to browse around. Feel free to <a href="contact.html">contact me</a> if you have any questions! :)</p>
-		<br/>
-		
-		<br/><br/>
+		<a href="portfolio.html">&lt;.&lt;. R e t u r n &nbsp; t o &nbsp; p o r t f o l i o</a>
 		</div>
 		
-		
 		</div>
+		</div>
+	
+		
 	</div>
 	
-	</div>
 	
 	<div class="row">
 	
