--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<br/>
 		<p>Here you'll find selected <i>artwork</i>, <i>photographs</i>, and <i>webpages</i> I've designed over the years.  You will find the navigation on the left, along with several external links near the the upper right.</p>
 		<br/>
-		<p>I'm currently undergraduate at the University of California, San Diego. I enjoy cooking, traveling, and video gaming. I absoltely love cats (and dogs)!</p>
+		<p>I'm currently undergraduate at the University of California, San Diego. I enjoy cooking, traveling, and video gaming. I absolutely love cats (and dogs)!</p>
 		<br/>
 		<p>Please take your time to browse around. Feel free to <a href="contact.html">contact me</a> if you have any questions! :)</p>
 		<br/>
